@@ -1,1 +1,7 @@
 SUBDIRS=common html lib
+
+docbookdir=$(datadir)/sgml/docbook/xsl-stylesheets-1.29
+docbook_DATA = \
+	VERSION
+
+EXTRA_DIST=$(docbook_DATA)
