@@ -1,5 +1,11 @@
 2001-06-11 John Fleck <jfleck@inkstain.net>
 
+	* components/help/converters/gnome/db2html3/
+	docbook/Makefile.am to include file VERSION in DocBook
+	stylesheet
+
+2001-06-11 John Fleck <jfleck@inkstain.net>
+
 	* components/help/converters/gnome-db2html3/gnome-customization
 	gnome-customization.xsl
 	updating path to including docbook stylesheets
